--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,9 +1,18 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:background">@drawable/background_splash</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/background</item>
+    </style>
+
+    <style name="SplashStatusBarTheme" parent="SplashTheme">
+        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/background</item>
     </style>
 
 </resources>
