--- a/android/app/src/main/res/drawable/background_splash.xml
+++ b/android/app/src/main/res/drawable/background_splash.xml
@@ -2,12 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:drawable="@color/background" />
+        android:drawable="@drawable/gradient_background" />
 
     <item
         android:drawable="@drawable/splash_icon"
-        android:height="34dp"
-        android:width="158dp"
+        android:height="89dp"
+        android:width="236dp"
         android:gravity="center"
         />
 
