--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,15 +4,14 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:textColor">#000000</item>
+        <item name="android:windowTranslucentNavigation" tools:targetApi="lollipop">true</item>
+        <item name="android:windowTranslucentStatus" tools:targetApi="lollipop">true</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:background">@drawable/background_splash</item>
-        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/background</item>
-    </style>
-
-    <style name="SplashStatusBarTheme" parent="SplashTheme">
-        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/background</item>
+        <item name="android:windowTranslucentNavigation" tools:targetApi="lollipop">true</item>
+        <item name="android:windowTranslucentStatus" tools:targetApi="lollipop">true</item>
     </style>
 
 </resources>
