--- a/react-app/android/app/src/main/res/values/styles.xml
+++ b/react-app/android/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:background">@drawable/background_splash</item>
+        <item name="android:background">@drawable/bootsplash</item>
         <item name="android:windowTranslucentNavigation" tools:targetApi="lollipop">true</item>
         <item name="android:windowTranslucentStatus" tools:targetApi="lollipop">true</item>
     </style>
